--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ a{
     text-decoration: none;
     color:var(--c2);
     font-weight: bold;
+    font-family: var(--ff);
 }
 
 
@@ -86,7 +87,28 @@ header nav ul a:hover{
 
 /* MAIN*/
 
+h1{
+    font-size: 30px;
+    color: var(--c2);
+    text-align: center;
+    font-family: var(--ff);
+}
  /* estilo para las fichas de eventos */
+ .festititulo{
+    font-size:26px;
+    font-family: var(--ff);
+    text-align: center;
+ }
+ .festi{
+    padding:1px;
+    margin: 0 auto;
+    font-family: serif;
+ }
+    .festiv{
+padding: 2px;
+font-family: serif;
+    }
+ 
 ul.galeria {
     display: grid;
     grid-template-columns:repeat(auto-fill, minmax(220px, 1fr));
@@ -98,10 +120,10 @@ ul.galeria {
 
 ul li.container {
     background-color: #fff;
-    border-radius: 8px;
+    border-radius: 20px;
     box-shadow: 0 4px 8px black;
     overflow: hidden;
-    padding: 20px;
+    padding: 0px;
     
 }
 
@@ -112,23 +134,24 @@ ul li .contenedor img.evento {
     width: 100%;
     height: 200px;
     object-fit: cover;
-    border-radius: 8px;
-    margin-bottom: 15px;
+    border-radius:8px;
+    
 }
 
 /* Títulos y texto */
 ul li .contenedor h2 {
-    font-size: 1.25rem;
-    color: #333;
-    margin-bottom: 10px;
+    font-size: 20px;
+    color: black;
+    margin-bottom: 5px;
     text-align: center;
+    font-family: var(--ff);
 }
 
 ul li .contenedor p {
-    font-size: 0.95rem;
-    color: #666;
-    margin-bottom: 8px;
+    font-size: 18px;
+    color: #000000;
     text-align: center;
+    font-family: var(--ff);
 }
 /* Estilo Festivales */
 
@@ -147,11 +170,12 @@ ul li .contenedor p {
     
     border-radius: 8px; 
     align-items: center; 
+}
 
 
 .imagen {
     width: 150px; 
-    height: 150px; 
+    
     object-fit: cover; 
     margin-right: 20px; 
     border-radius: 8px; 
@@ -159,7 +183,7 @@ ul li .contenedor p {
 
 
 .info {
-    flex: 1; /* Hace que el texto ocupe todo el espacio restante */
+    flex: 1; 
 }
 
 
@@ -167,13 +191,16 @@ ul li .contenedor p {
     font-size: 20px; 
     margin: 0 0 10px; 
     color:black; 
+    font-family: var(--ff);
 }
 
 
 .info p {
     margin: 5px 0; 
     color:black; 
-
+    font-family: var(--ff);
+    font-size:18px;
+}
 
 .item:hover {
     
@@ -186,6 +213,7 @@ footer {
     background: red;
     font-weight: bold;
     padding:20px;
+    font-family: var(--ff);
     
     }
     ul{list-style:none;}
@@ -197,6 +225,7 @@ footer {
         padding: 20px;
         background-color: #f4f4f4;
         border-radius: 8px;
+        font-family: var(--ff);
     }
     
     label {
@@ -223,8 +252,99 @@ footer {
     }
     
     button:hover {
-        background-color: red;
+        background-color: white;
+        color: red;
     }   
+
+    /*Estilo del carrusel de fotos del apartado Sobre Nosotros*/
+
+    /* Slideshow container */
+.slideshow-container {
+    max-width: 1000px;
+    position: relative;
+    margin: auto;
+  }
+  
+  /* Hide the images by default */
+  .mySlides {
+    display: none;
+  }
+  
+  /* Next & previous buttons */
+  .prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 25px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+  }
+  
+  /* Position the "next button" to the right */
+  .next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+  
+  /* On hover, add a black background color with a little bit see-through */
+  .prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+  }
+  
+  /* Caption text */
+  .text {
+    color: #f2f2f2;
+    font-size: 25px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
+    font-family: var(--ff:system-ui, aria, sans-serif);
+    font-weight: bold;
+  }
+  
+  /* Number text (1/4 etc) */
+  .numbertext {
+    color: #f2f2f2;
+    font-size: 15px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+  }
+  
+  /* The dots/bullets/indicators */
+  .dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: black;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+  }
+  
+  .active, .dot:hover {
+    background-color: #000000;
+  }
+  
+  /* Fading animation */
+  .fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
+  
+  @keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+  }
     
 
 /* Responsividad (para pantallas más pequeñas) */
